--- a/assets/styles/faq.css
+++ b/assets/styles/faq.css
@@ -1,30 +1,13 @@
-/* body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Hind', sans-serif;
-  background: #fff;
-  color: #4d5974;
-  display: flex;
-  min-height: 100vh;
-} */
-
-.faq-container{
-  /* width; */
-}
-
-.faq-container .container {
-  width: 80%;
-  margin: 0 auto;
+.faq .container {
   padding: 1.5rem 0;
-  /* width: 48rem; */
 }
 
 .accordion .accordion-item {
-  border-bottom: 1px solid var(--primary-black-color);
+  border-bottom: 1px solid #828282;
 }
 
 .accordion .accordion-item button[aria-expanded='true'] {
-  border-bottom: 1px solid var(--primary-black-color);
+  border-bottom: 1px solid #828282;
 }
 
 .accordion button {
@@ -116,7 +99,7 @@
 }
 
 @media (max-width: 768px){
-  .faq-container .container{
+  .faq .container{
     width: 100%;
     padding: 1.5rem;
   }
